--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_eu.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_eu.arb
@@ -1,110 +1,110 @@
 {
-  "@@locale": "fr",
-  "appName": "Palumba EU",
+  "@@locale": "eu",
+  "appName": "Palumba EB",
   "shortAppName": "Palumba",
   "ok": "Ok",
-  "yes": "Oui",
-  "no": "Non",
-  "cancel": "Annuler",
-  "textContinue": "Continuer",
-  "alertServerErrorTitle": "Oups !",
-  "alertServerErrorText": "Quelque chose s’est mal passé de notre côté. Veuillez réessayer.",
-  "skip": "Ignorer",
-  "neutral": "Neutre",
-  "faq": "FAQ",
-  "message_half_test_done": "Continue, t'es déjà à la moitié !",
-  "message_five_cards_left": "Plus que 5 questions à swiper :)",
+  "yes": "Bai",
+  "no": "Ez",
+  "cancel": "Ezeztatu",
+  "textContinue": "Jarraitu",
+  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorText": "Zerbait gaizki joan da gure aldetik. Mesedez, saiatu berriro geroago.",
+  "skip": "Salto",
+  "neutral": "Neutrala",
+  "faq": "Maiz egiten diren galderak",
+  "message_half_test_done": "%50 egin duzu, animo!",
+  "message_five_cards_left": "5 galdera bakarrik gelditzen zaizkizu :)",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "On dirait que tu n'es plus connecté à internet :(",
+  "splashPageNoInternet": "Badirudi ez duzula Interneteko konexiorik",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "On continue en Français ? :)",
-  "languagePageSubtitle": "Cela pourra être modifié plus tard dans les paramètres.",
+  "languagePageTitle": "Ingelesez? :)",
+  "languagePageSubtitle": "Hau konfigurazioan alda daiteke.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Si ce pigeon n'arrive pas à te faire voter en juin, rien n'y arrivera.",
-  "entranceTitle2": "Swipe ton opinion sur une multitude de sujets.",
-  "entranceTitle3": "Découvre qui soutient tes priorités et candidate aux élections.",
-  "entranceMatchesFoundQuote": "{count} matches trouvés dans les dernières 24h",
-  "entranceStartButton": "Lancer Palumba",
+  "entranceTitle1": "Uso eder honek ezin badizu ekainean botoa ematen lagundu, ezerk ez dizu lagunduko.",
+  "entranceTitle2": "Inporta zaizun gaiak aukeratu.",
+  "entranceTitle3": "Ezagutu zure \"match-a\" eta jakin ezazu nori eman botoa hauteskundeetan.",
+  "entranceMatchesFoundQuote": "{count} azken 24 orduetan aurkitutako \"match-ak\"",
+  "entranceStartButton": "Hasi Palumbarekin",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongrie",
-  "denmark": "Danemark",
-  "germany": "Allemagne",
-  "spain": "Espagne",
-  "france": "France",
-  "poland": "Pologne",
-  "romania": "Roumanie",
-  "sweden": "Suède",
-  "onBoardingStep1Title": "Dans quel pays votes-tu ?",
-  "onBoardingStep1Subtitle": "Je ne sais pas",
-  "onBoardingStep2Title": "Mon âge",
-  "onBoardingStep3Title": "Je m'identifie comme",
-  "onBoardingStep3Option1": "Femme",
-  "onBoardingStep3Option2": "Homme",
-  "onBoardingStep3Option3": "Gender-fluide",
-  "onBoardingStep3Option4": "Non-binaire",
-  "onBoardingStep3Option5": "Autre",
-  "onBoardingNotAnswerButton": "Préfère ne pas dire",
-  "onBoardingCardQuestion": "Je n'ai aucune idée de pour qui voter aux Élections Européennes 2024",
-  "onBoardingLastStepTitle": "Swipe en fonction de ton opinion",
+  "hungary": "Hungaria",
+  "denmark": "Danimarka",
+  "germany": "Alemania",
+  "spain": "Espainia",
+  "france": "Frantzia",
+  "poland": "Polonia",
+  "romania": "Errumania",
+  "sweden": "Suedia",
+  "onBoardingStep1Title": "Non bozkatuko duzu?",
+  "onBoardingStep1Subtitle": "Ez dakit",
+  "onBoardingStep2Title": "Nire adina",
+  "onBoardingStep3Title": "Honela identifikatzen naiz",
+  "onBoardingStep3Option1": "Emakume",
+  "onBoardingStep3Option2": "Gizon",
+  "onBoardingStep3Option3": "Genero jariakorra",
+  "onBoardingStep3Option4": "Ez-binarioa",
+  "onBoardingStep3Option5": "Beste",
+  "onBoardingNotAnswerButton": "Ez esatea nahiago dut",
+  "onBoardingCardQuestion": "Ez dakit nori eman botoa 2024ko Europako hauteskundeetan",
+  "onBoardingLastStepTitle": "Hatza pasa zure adostasunaren arabera",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Tes résultats personnalisés sont en route :)",
-  "loadingResultsPageTitle2": "Ça devrait être plus rapide que d'obtenir des billets pour Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Recherche de matches avec les listes de candidat·es en {country} 🔍",
-  "loadingResultsPageTitle4": "Presque prêt, un dernier check...",
+  "loadingResultsPageTitle1": "Zure emaitza pertsonalizatuak bidean dira :)",
+  "loadingResultsPageTitle2": "Hau Taylor Swiften 👀 sarrerak lortzea baino azkarragoa izango da",
+  "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
+  "loadingResultsPageTitle4": "Ia prest, azken errepasoa eta kito...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "Un match et bien plus 👉👈",
-  "resultsPage1Text": "Dans les écrans suivants, tu trouveras le groupe le plus compatible avec tes idées au Parlement européen, les listes locales correspondantes dans ton pays, et nous avons même trouvé quelques infos supplémentaires à partir de tes réponses 😌",
-  "resultsPage1Button": "Appuie pour continuer",
-  "resultsPage2_1Title": "En vrai, entre le",
-  "resultsPage2_2Title": "et moi, c'est une Love Story (EU's Version)",
-  "resultsPage3Title": "Ma proximité avec les Groupes Parlementaires Européens",
-  "resultsPage4TitleTop": "Pro Intégration européenne",
-  "resultsPage4TitleBottom": "Anti Intégration européenne",
-  "resultsPage4TitleLeft": "de Gauche",
-  "resultsPage4TitleRight": "de Droite",
-  "resultsPage4TitleUserHere": "It’s me, hi!",
-  "resultsPage5Title": "Sur des sujets plus spécifiques, de quel groupe suis-je plus proche ?",
-  "resultsPage5Topic1": "Questions environnementales",
-  "resultsPage5Topic2": "Droits Humains et Sociaux",
-  "resultsPage5Topic3": "Intervention Économique",
-  "resultsPage6_1Title": "Ok, c'est cool de savoir quel groupe me convient...",
-  "resultsPage6_2Title": "Mais aux Élections Européennes, on vote pour une liste locale",
-  "resultsPage6Text": "Dans l'écran qui suit, tu peux découvrir les listes de candidat·es de ton pays qui sont les plus susceptibles de rejoindre ton groupe parlementaire européen.",
-  "resultsPage7Title": "Les listes en {country} les plus alignées avec {group}",
-  "resultsPage7Disclaimer": "Dans aucun ordre particulier.",
-  "resultsPage7NoLocalCandidates": "Aucune liste locale trouvée en {country}",
-  "resultsPage8_1Text": "Sur {topic}, tu es à {percentage}% plus pour",
-  "resultsPage8_2Text": "Action climatique 🌱😌",
-  "resultsPage8Help": "Tu es un·e militant·e pour l'action climatique ! Tu penses que la lutte contre la crise environnementale nécessite une action collective et que chacun·e doit en faire une priorité absolue. Tu ne vois pas d'inconvénient à ce que l'Union européenne réglemente les entreprises à cette fin. Après tout, à quoi sert la croissance économique si la planète devient inhabitable ?#ClimateActionNow #NoPlanetB",
-  "resultsPage9Help": "Appuie sur la carte pour en voir d'autres",
-  "resultsPage9Text1": "Les élections portent sur beaucoup de sujets, mais il y a une chose qui vraiment",
-  "resultsPage9Text2": "Belongs With Me 😌",
-  "resultsPage10Title": "Recevoir un rappel d'aller voter ?",
-  "resultsPage10NopButton": "Non merci !",
-  "resultsPage10YesButton": "Ouiiiii",
-  "resultsShare": "Partager",
+  "resultsPage1Title": "Match bat eta askoz gehio 👉👈",
+  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
+  "resultsPage1Button": "Sakatu jarraitzeko",
+  "resultsPage2_1Title": "Honestly, between the",
+  "resultsPage2_2Title": "eta ni, maitasun-istorio moduko bat da (EB bertsioa)",
+  "resultsPage3Title": "Zein hurbil nagoen Europako Parlamentuko taldeetatik",
+  "resultsPage4TitleTop": "EBko integrazioaren alde",
+  "resultsPage4TitleBottom": "EBko integrazioaren kontra",
+  "resultsPage4TitleLeft": "Ezkerra",
+  "resultsPage4TitleRight": "Eskuina",
+  "resultsPage4TitleUserHere": "Kaixo!!",
+  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
+  "resultsPage5Topic1": "Ingurumen-gaiak",
+  "resultsPage5Topic2": "Giza eta Gizarte Eskubideak",
+  "resultsPage5Topic3": "Esku-hartze ekonomikoa",
+  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
+  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
+  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
+  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
+  "resultsPage7Disclaimer": "In no particular order.",
+  "resultsPage7NoLocalCandidates": "No local parties found in {country}",
+  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
+  "resultsPage8_2Text": "Ekintza Klimatiko Aktiboa 🌱😌",
+  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
+  "resultsPage9Help": "Egin klik kartak nahasteko",
+  "resultsPage9Text1": "Husteskundeek gai asko jorratzen dituzte",
+  "resultsPage9Text2": "Bat nator",
+  "resultsPage10Title": "Jakinarazpena bozkatzeko momentua iristean?",
+  "resultsPage10NopButton": "Ez, eskerrk asko!",
+  "resultsPage10YesButton": "Baiiiiii",
+  "resultsShare": "Partekatu",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} matches trouvés dans les dernières 24h",
-  "homePageBackToTest": "Retour au test",
-  "homePageMyResults": "Mes résultats",
-  "homePageStartButton": "Lancer un nouveau test",
+  "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
+  "homePageBackToTest": "Testera itzuli",
+  "homePageMyResults": "Nire emaitzak",
+  "homePageStartButton": "Test berri bat hasi",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Langue",
-  "settingsPageSubtitleLanguage": "Je préfère utiliser Palumba en",
-  "settingsPageTextLanguage": "Pour changer la langue, clique sur celle ci-dessous",
-  "settingsPageTitleAbout": "À propos",
-  "settingsPageTextAbout": "Palumba n'est ni une entreprise, ni un parti politique, ni un gouvernement. Nous sommes une association indépendante à but non lucratif de plus de 120 jeunes 🐦 de toute l'Europe qui se sont réuni·es l'été dernier et ont commencé à créer cette application. Nous avons un objectif : t'aider à mieux comprendre comment fonctionnent les élections européennes et quelles listes de candidat·es pourraient correspondre à tes idées, pour que tu puisses voter plus en confiance pour celles et ceux qui soutiennent tes priorités. Notre algorithme est open-source, les déclarations sur lesquelles tu swipes ont été revues par des chercheur·ses, et tes données sont tellement anonymisées que nous n'avons aucun moyen de t'identifier :)",
-  "settingsPageTitleAssociation": "L'association",
-  "settingsPageTitlePartners": "Partenaires",
-  "settingsPageTextPartners": "Important de te préciser que les partenaires n'ont pas de pouvoir éditorial sur le contenu de l'application, qui reste une initiative non partisane avec un objectif clair : t'aider à comprendre qui soutient tes opinions aux niveaux européen et national.",
-  "settingsPageSubtitle1": "Sponsors Principaux",
-  "settingsPageSubtitle2": "Partenaires Européens",
-  "settingsPageSubtitle3": "Partenaire académique",
-  "settingsPageSubtitle4": "Partenaires Institutionnels Nationaux",
-  "settingsPageSubtitle5": "Prestataires de services",
-  "settingsPageShareButtonText": "Partager",
-  "settingsPagePrivacyPolicy": "Protection des données",
-  "settingsPageShareText": "Si même un pigeon te convainc pas d’aller voter, rien n'y arrivera 👀 J'ai utilisé l'application et tu devrais essayer :",
+  "settingsPageTitleLanguage": "Hizkuntza",
+  "settingsPageSubtitleLanguage": "Nahiago dut aplikazio hau hemen erabili",
+  "settingsPageTextLanguage": "Hikuntza aldatzeko egin klik",
+  "settingsPageTitleAbout": "Guri guruz",
+  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTitleAssociation": "Elkartea",
+  "settingsPageTitlePartners": "Patners",
+  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
+  "settingsPageSubtitle1": "Babesle nagusiak",
+  "settingsPageSubtitle2": "Europako bazkideak",
+  "settingsPageSubtitle3": "Bazkide akdemikoa",
+  "settingsPageSubtitle4": "Bazkide instituzional nazionalak",
+  "settingsPageSubtitle5": "Zerbitzu-hornitzaileak",
+  "settingsPageShareButtonText": "Partekatu",
+  "settingsPagePrivacyPolicy": "Datuen babesa",
+  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:",
   "entranceTitle1_ger25": "If this cute pigeon can’t help you vote in February, nothing will.",
   "@entranceTitle1_ger25": {
     "description": "-> entranceTitle1"
